--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -9,8 +9,9 @@ on:
 jobs:
   test:
     strategy:
-      os: [windows-latest, macos-latest, ubuntu-latest]
-      go: ["1.17", "1.18", "1.19", "1.20"]
+      matrix:
+        os: [windows-latest, macos-latest, ubuntu-latest]
+        go: ["1.17", "1.18", "1.19", "1.20"]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
